--- a/styles.css
+++ b/styles.css
@@ -46,17 +46,61 @@
 
 /* Log in*/
 .LoginContainer{
-  width: 500px;
-	border: 2px solid #ccc;
-	padding: 30px;
-	background: #fff;
-	border-radius: 15px;
   align-items: center;
-  text-align: center;
+  background: #1690A7;
+	display: flex;
+  flex-direction: column;
+	height: 100vh;
+	justify-content: center;
 }
  
 .LoginLabel{
   color: #888;
 	font-size: 18px;
 	padding: 10px;
+}
+
+.LoginForm {
+  background: #fff;
+  border: 2px solid #ccc;
+	border-radius: 15px;
+  padding: 30px;
+  width: 500px;
+}
+
+.LoginError{
+  background: #F2DEDE;
+  border-radius: 5px;
+  color: #A94442;
+  margin: 20px auto;
+  padding: 10px;
+  width: 95%;
+}
+
+.LoginHeader{
+  text-align: center;
+	margin-bottom: 40px;
+}
+
+.LoginInput{
+  display: block;
+	border: 2px solid #ccc;
+	width: 95%;
+	padding: 10px;
+	margin: 10px auto;
+	border-radius: 5px;
+}
+
+.LoginButton {
+  float: right;
+	background: #555;
+	padding: 10px 15px;
+	color: #fff;
+	border-radius: 5px;
+	margin-right: 10px;
+	border: none;
+}
+
+.LoginButton:hover {
+  opacity: .8;
 }
