--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 
 /*Default style*/
 *{
+  
   margin: 0;
   padding: 0;
   list-style: none;
@@ -11,28 +12,29 @@
   font-family: 'Roboto';
 }
 
-.header{
+.Header{
   width: 100%;
   height: 80px;
   display: block;
   background-color: #101010;
+  
 }
 
-.inner_header{
-  width: 1000px;
+.InnerHeader{
+  width: 80%;
   height: 100%;
   display: block;
   margin: 0 auto;
-  background-color: red;
+  background-color: #101010;
 }
 
-.logo_container{
+.LogoContainer{
   height: 100%;
   display: table;
   float: left;
 }
 
-.logo_container h1{
+.LogoContainer h1{
   color: white;
   height: 100%;
   display: table-cell;
@@ -40,9 +42,53 @@
   font-size: 32px;
   font-weight: 200;
 }
-.logo_container span{
+.LogoContainer span{
   font-weight: 800;
 }
+
+.Navigation{
+  float: right;
+  height: 100%;
+}
+
+.Navigation a{
+  height: 100%;
+  display: table;
+  float: left;
+  padding: 0px 20px;
+}
+
+/*Last subject in a hughs the right site*/
+.Navigation a:last-child{
+  padding-right: 0;
+}
+
+.Navigation a li{
+  display: table-cell;
+  vertical-align: middle;
+  height: 100%;
+  color: white;
+  font-size: 16px;
+}
+
+.Container{
+  height: 500px;
+  width: 100%;
+  background-color: green;
+}
+.Container0{
+  height: 500px;
+  width: 100%;
+  background-color: blue;
+}
+
+footer{
+  height: 200px;
+  width: 100%;
+  background-color: #888;
+}
+
+
 
 /* Log in*/
 .LoginContainer{
