--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,12 @@
   font-family: 'Roboto';
 }
 
+
 .Header{
   width: 100%;
   height: 80px;
   display: block;
   background-color: #101010;
-  
 }
 
 .InnerHeader{
@@ -33,7 +33,7 @@
   display: table;
   float: left;
 }
-
+/*logo style*/
 .LogoContainer h1{
   color: white;
   height: 100%;
@@ -42,6 +42,8 @@
   font-size: 32px;
   font-weight: 200;
 }
+
+/*logo style*/
 .LogoContainer span{
   font-weight: 800;
 }
@@ -69,7 +71,13 @@
   height: 100%;
   color: white;
   font-size: 16px;
+  
 }
+/*Change color when hover*/
+.Navigation a li:hover{
+  color:  blue;
+}
+
 
 .Container{
   height: 500px;
