--- a/styles.css
+++ b/styles.css
@@ -1,201 +1,216 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-/*https://www.youtube.com/watch?v=GxwHXxumdQk&ab_channel=MarcHinton*/
-
-/*Default style*/
+/* Default style */
 *{
-  
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-decoration: none;
-  font-family: 'Roboto';
+margin: 0;
+padding: 0;
+list-style: none;
+text-decoration: none;
+font-family: 'Roboto';
 }
 
-
 .Header{
-  width: 100%;
-  height: 80px;
-  display: block;
-  background-color: #101010;
+position: sticky;
+top: 0;
+width: 100%;
+height: 80px;
+display: block;
+background-color: #101010;
+z-index: 100;
 }
 
 .InnerHeader{
-  width: 80%;
-  height: 100%;
-  display: block;
-  margin: 0 auto;
-  background-color: #101010;
+width: 80%;
+height: 100%;
+display: block;
+margin: 0 auto;
+background-color: #101010;
 }
 
 .LogoContainer{
-  height: 100%;
-  display: table;
-  float: left;
-}
-/*logo style*/
-.LogoContainer h1{
-  color: white;
-  height: 100%;
-  display: table-cell;
-  vertical-align: middle;
-  font-size: 32px;
-  font-weight: 200;
+height: 100%;
+display: table;
+float: left;
 }
 
-/*logo style*/
+/* Logo style */
+.LogoContainer h1{
+color: white;
+height: 100%;
+display: table-cell;
+vertical-align: middle;
+font-size: 32px;
+font-weight: 200;
+}
+
+/* Logo style */
 .LogoContainer span{
-  font-weight: 800;
+font-weight: 800;
 }
 
 .Navigation{
-  float: right;
-  height: 100%;
+float: right;
+height: 100%;
 }
 
 .Navigation a{
-  height: 100%;
-  display: table;
-  float: left;
-  padding: 0px 20px;
+height: 100%;
+display: table;
+float: left;
+padding: 0px 20px;
 }
 
-/*Last subject in a hughs the right site*/
+/* Last subject in a hugs the right side */
 .Navigation a:last-child{
-  padding-right: 0;
+padding-right: 0;
 }
 
 .Navigation a li{
-  display: table-cell;
-  vertical-align: middle;
-  height: 100%;
-  color: white;
-  font-size: 16px;
-  
-}
-/*Change color when hover*/
-.Navigation a li:hover{
-  color:  blue;
+display: table-cell;
+vertical-align: middle;
+height: 100%;
+color: white;
+font-size: 16px;
 }
 
+/* Change color when hover */
+.Navigation a li:hover{
+color:  blue;
+}
 
 .Container{
-  height: 500px;
-  width: 100%;
-  background-color: green;
+height: 500px;
+width: 100%;
+background-color: green;
 }
+
+.text {
+  width: 40%;
+  background-color: orange;
+  height: 450px;
+  margin-top: 25px;
+  margin-left: 10%;
+  float: left;
+}
+
+.img {
+  width: 40%;
+  background-color: yellow;
+  height: 450px;
+  margin-top: 25px;
+  margin-right: 10%;
+  float: right;
+}
+
 .Container0{
-  height: 500px;
-  width: 100%;
-  background-color: blue;
+height: 500px;
+width: 100%;
+background-color: blue;
 }
 
 footer{
-  height: 200px;
-  width: 100%;
-  background-color: #888;
+height: 200px;
+width: 100%;
+background-color: #888;
 }
 
-
-
-
-
-/* Log in*/
+/* Login */
 .LoginContainer{
-  align-items: center;
-  background: #1690A7;
-	display: flex;
-  flex-direction: column;
-	height: 100vh;
-	justify-content: center;
+align-items: center;
+background: #1690A7;
+display: flex;
+flex-direction: column;
+height: 100vh;
+justify-content: center;
 }
- 
+
 .LoginLabel{
-  color: #888;
-	font-size: 18px;
-	padding: 10px;
+color: #888;
+font-size: 18px;
+padding: 10px;
 }
 
 .LoginForm {
-  background: #fff;
-  border: 2px solid #ccc;
-	border-radius: 15px;
-  padding: 30px;
-  width: 500px;
+background: #fff;
+border: 2px solid #ccc;
+border-radius: 15px;
+padding: 30px;
+width: 500px;
 }
 
 .LoginHeader{
-  margin-bottom: 40px;
-  text-align: center;
+margin-bottom: 40px;
+text-align: center;
 }
 
 .LoginInput{
-  border: 2px solid #ccc;
-	border-radius: 5px;
-  display: block;
-	margin: 10px auto;
-  padding: 10px;
-  width: 95%;
+border: 2px solid #ccc;
+border-radius: 5px;
+display: block;
+margin: 10px auto;
+padding: 10px;
+width: 95%;
 }
 
 .LoginButton {
-  background: #555;
-  border: none;
-  border-radius: 5px;
-  color: #fff;
-  float: right;
-	margin-right: 10px;
-  padding: 10px 15px;
+background: #555;
+border: none;
+border-radius: 5px;
+color: #fff;
+float: right;
+margin-right: 10px;
+padding: 10px 15px;
 }
 
 .LoginButton:hover {
-  opacity: .8;
+opacity: .8;
 }
 
 .LoginError{
-  background: #F2DEDE;
-  border-radius: 5px;
-  color: #A94442;
-  margin: 20px auto;
-  padding: 10px;
-  width: 95%;
+background: #F2DEDE;
+border-radius: 5px;
+color: #A94442;
+margin: 20px auto;
+padding: 10px;
+width: 95%;
 }
-/* product.php*/
+
+/* product.php */
 .ColumnProduct{
-  float: left;
-  width: 25%;
+float: left;
+width: 25%;
 }
 
 /* Clear floats after the columns */
 .row1:after {
-  content: "";
-  display: table;
-  clear: both;
+content: "";
+display: table;
+clear: both;
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .ColumnProduct {
-    width: 100%;
-  }
+.ColumnProduct {
+width: 100%;
+}
 }
 
-/* product.php*/
+/* product.php */
 .ColumnBrands{
-  float: left;
-  width: 25%;
+float: left;
+width: 25%;
 }
 
 /* Clear floats after the columns */
 .row2:after {
-  content: "";
-  display: table;
-  clear: both;
+content: "";
+display: table;
+clear: both;
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .ColumnBrands {
-    width: 100%;
-  }
+.ColumnBrands {
+width: 100%;
+}
 }
