--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,22 @@ text-decoration: none;
 font-family: 'Roboto';
 }
 
+/*
+
+Header/Navbar
+  background-color: #f5f5f5;
+
+Container/KontaktButton/Hover color
+  background-color: #a4d792;   
+*/
+
 .Header{
 position: sticky;
 top: 0;
 width: 100%;
 height: 80px;
 display: block;
-background-color: #101010;
+background-color: #f5f5f5;
 z-index: 100;
 }
 
@@ -24,7 +33,7 @@ width: 80%;
 height: 100%;
 display: block;
 margin: 0 auto;
-background-color: #101010;
+background-color: #f5f5f5
 }
 
 .LogoContainer{
@@ -35,7 +44,8 @@ float: left;
 
 /* Logo style */
 .LogoContainer h1{
-color: white;
+padding-top: 18px;
+color: #424141;
 height: 100%;
 display: table-cell;
 vertical-align: middle;
@@ -57,31 +67,46 @@ height: 100%;
 height: 100%;
 display: table;
 float: left;
-padding: 0px 20px;
+padding: 0px 18px;
+
 }
 
-/* Last subject in a hugs the right side */
-.Navigation a:last-child{
-padding-right: 0;
+/*Kontakt os button*/
+.KontaktOs{
+padding: 10px;
+margin-top: 18px;
+background-color: #a4d792;
+border-radius: 8px;
+height: 40px;
+border-style: none;
+font-family: 'Roboto';
+color: #424141;
+cursor: pointer;
+font-size: 17px;
 }
+.KontaktOs:hover{
+  scale: 110%;
+}
+
 
 .Navigation a li{
 display: table-cell;
 vertical-align: middle;
 height: 100%;
-color: white;
-font-size: 16px;
+color: #424141;
+font-size: 17px;
 }
 
 /* Change color when hover */
 .Navigation a li:hover{
-color:  blue;
+color:  #a4d792;
+scale: 110%;
 }
 
 .Container{
 height: 500px;
 width: 100%;
-background-color: green;
+background-color: #a4d792;
 }
 
 .text {
@@ -105,7 +130,7 @@ background-color: green;
 .Container0{
 height: 500px;
 width: 100%;
-background-color: blue;
+background-color: #f5f5f5;
 }
 
 footer{
