--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,14 @@ Header/Navbar
   background-color: #f5f5f5;
 
 Container/KontaktButton/Hover color
-  background-color: #a4d792;   
+  background-color: #a4d792;   or #A0C24A
 */
+
+img{
+  margin-top: 10px;
+  width: 50px;
+  height: 45px;
+}
 
 .Header{
 position: sticky;
@@ -56,6 +62,8 @@ font-weight: 200;
 /* Logo style */
 .LogoContainer span{
 font-weight: 800;
+text-decoration: underline;
+color: #A0C24A;
 }
 
 .Navigation{
@@ -75,12 +83,12 @@ padding: 0px 18px;
 .KontaktOs{
 padding: 10px;
 margin-top: 18px;
-background-color: #a4d792;
+background-color: #A0C24A;
 border-radius: 8px;
 height: 40px;
 border-style: none;
 font-family: 'Roboto';
-color: #424141;
+color: #f5f5f5;
 cursor: pointer;
 font-size: 17px;
 }
@@ -99,14 +107,14 @@ font-size: 17px;
 
 /* Change color when hover */
 .Navigation a li:hover{
-color:  #a4d792;
+color:  #A0C24A;
 scale: 110%;
 }
 
 .Container{
 height: 500px;
 width: 100%;
-background-color: #a4d792;
+background-color: #A0C24A;
 }
 
 .text {
@@ -133,10 +141,53 @@ width: 100%;
 background-color: #f5f5f5;
 }
 
+.Container1{
+  max-width: 80%;
+  margin: auto;
+}
+
+.Row{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 footer{
-height: 200px;
-width: 100%;
-background-color: #888;
+  background-color: #24262b;
+  padding: 70px 0;
+}
+
+.FooterColumn{
+  width: 25%;
+  line-height: 1.5;
+}
+.FooterColumn h4{
+  font-size: 18px;
+  color: #f5f5f5;
+  margin-bottom: 30px;
+  font-weight: 800;
+  
+
+}
+/*Margin, except last element*/
+.FooterColumn ul li:not(:last-child){
+  margin-bottom: 10px;
+}
+.FooterColumn ul li{
+  font-size: 16px;
+  color: #f5f5f5;
+  font-weight: 300;
+  display: block;
+}
+
+.FooterColumn ul li a{
+  font-size: 16px;
+  color: #f5f5f5;
+  font-weight: 300;
+  display: block;
+}
+
+.FooterColumn ul li a:hover{
+  scale: 110%;
 }
 
 /* Login */
