--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,23 @@ opacity: .8;
   margin: 20px auto;
 }
 
+
+.Logout {
+	float: right;
+	background: #555;
+	padding: 10px 15px;
+	color: #fff;
+	border-radius: 5px;
+	margin-right: 10px;
+	border: none;
+	text-decoration: none;
+}
+
+.Logout:hover{
+	opacity: .7;
+}
+
+
 /* product page*/
 .ProductPage {
   background-color: #A0C24A;
@@ -497,21 +514,6 @@ opacity: .8;
 .GridItemAllProduct button {
   background-color: white;
 }
-
-.AddToCart {
-  background-color: #A0C24A !important; /* Green background color */
-  border-style: solid;
-  border: #24262b; 
-  color: black; /* Text color */
-  padding: 10px 10px; /* Add padding */
-  text-align: center; /* Center the text */
-  text-decoration: none; /* Remove underline */
-  display: inline-block; /* Display as inline-block */
-  font-size: 16px; /* Font size */
-  cursor: pointer; /* Add cursor style */
-  transition-duration: 0.4s; /* Add transition effect */
-}
-
 /*
 .GridContainerAllProduct .GridItem:nth-child(1) {
   background-image: url(./img/product/annatomatereco.jpeg);
