--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ display: table-cell;
 vertical-align: middle;
 }
 .LogoContainer h1{
+  padding-left: 10px;
   font-size: 25px;
   font-weight: 500;
 }
@@ -108,54 +109,125 @@ padding: 0px 13px;
   scale: 110%;
 }
 
-.Container1{
-  max-width: 80%;
-  margin: auto;
+.Container{
+ height: 750px;
+ background-image: url("img/homepage.jpg");
+ background-repeat: no-repeat;
+ background-size: 100%;
+}
+.Box{
+  padding: 3%;
+  max-width: 30%;
+  background-color: #F5F8F3;
+  position: relative;
+  display: block;
+  top: 50%;
+  left: 15%;
+  height: 37.8% ;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+}
+.Box h2{
+  font-size: 30px;
+  font-weight: 400;
+  font-family: 'Roboto';
+  color:#424141 ;
+  margin-bottom: 20px;
 }
 
-.Row{
-  display: flex;
-  flex-wrap: wrap;
+.Box p{
+  font-size: 15px;
+  font-weight: 300;
+  font-family: 'Roboto';
+  color:#424141 ;
+  line-height: 2;
+}
+
+.Container1{
+  width: 80%;
+  height: 500px;
+  margin: auto;
+}
+.FooterHeader{
+  width: 100%;
+  padding-bottom: 50px;
+
+}
+
+.FooterHeader img{
+  height: 65px;
+  width: 65px;
+}
+
+.FooterHeader a{
+  display: table-cell;
+  vertical-align: middle;
+  color: #f5f5f5;
 }
 
 footer{
-  background-color: #24262b;
-  padding: 70px 0;
+  background-color: #2B3D24;
+  padding: 70px 10% 0 10%;
+
 }
 
 .FooterColumn{
-  width: 25%;
-  line-height: 1.5;
-}
-.FooterColumn h4{
-  font-size: 18px;
+  width: 100%;
+  line-height: 1;
   color: #f5f5f5;
   margin-bottom: 30px;
-  font-weight: 800;
-  
-
+  font-weight: 300;
+  background-color: purple;
 }
+
+/*Specific margin for last element in li*/
+.FooterColumn ul li:last-child{
+  margin-top: 20px;
+}
+
 /*Margin, except last element*/
 .FooterColumn ul li:not(:last-child){
   margin-bottom: 10px;
 }
-.FooterColumn ul li{
+
+.Main{
+  width: 50%;
+  float: left;
+}
+.Main1{
+  width: 50%;
+  float: right;
+}
+
+.Column{
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+}
+
+.Row{
+  display: flex;
   font-size: 16px;
   color: #f5f5f5;
   font-weight: 300;
-  display: block;
+  float: left;
+  background-color: orange;
 }
 
-.FooterColumn ul li a{
-  font-size: 16px;
-  color: #f5f5f5;
-  font-weight: 300;
-  display: block;
+.PedersUdvalgte{
+  padding-right: 20px;
 }
 
-.FooterColumn ul li a:hover{
-  scale: 110%;
+.Menu{
+  width: 300px;
+  background-color: yellow;
+  float: right;  
 }
+
+
+
+
+
 
 /* Login */
 .LoginContainer{
