--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,8 @@ height: 100%;
 display: table;
 float: left;
 padding: 0px 13px;
+color: inherit;
+text-decoration: none;
 }
 
 .Navigation a li{
@@ -248,9 +250,7 @@ footer{
   flex: 1 1;
 }
 
-.MessageFormBox{
 
-}
 #ContactUsFormSubmit{
   padding: 10px;
   margin-top: 1px;
