--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,64 @@ text-decoration: none;
   scale: 110%;
 }
 
+/*Shopping cart button*/
+.ShoppingCart{
+  margin-left: 10px;
+  padding: 10px 20px;
+  background-color: #2B3D24;
+  border-radius: 8px;
+  border-style: none;
+  font-family: 'Roboto';
+  color: #F5F8F3;
+  cursor: pointer;
+  font-size: 17px;  
+}
+
+.ShoppingCart img {
+  width: 20px;
+  height: 15px;
+}
+
+.ShoppingCart:hover{
+  scale: 110%;
+}
+
+/* Search bar */
+.SearchBar {
+  display: flex;
+  align-items: center;
+}
+
+.SearchBar form {
+  display: flex;
+  align-items: center;
+}
+
+.SearchBar input[type="text"] {
+  margin-left: 10px;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: solid 1px #2B3D24;
+  width: 526px;
+}
+
+.SearchBar button[type="submit"] {
+  padding: 10px 10px;
+  margin-left: 5px;
+  font-size: 16px;
+  background-color: #2B3D24;
+  border-radius: 4px;
+  border: none;
+  color: #F5F8F3;
+  cursor: pointer;
+}
+
+.SearchBar button[type="submit"]:hover {
+  background-color: #1D2D18;
+}
+
+
 .Container{
  height: 750px;
  background-image: url("img/homepage.jpg");
@@ -356,149 +414,6 @@ opacity: .8;
   text-decoration: none;
   font-family: 'Roboto';
 }
-
-/* SearchBar */
-.SearchBar {
-  display: flex;
-  align-items: center;
-  margin-left: 16px; /* Adjust the margin as needed */
-}
-
-.SearchBar input[type="text"] {
-  padding: 8px;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-}
-
-.SearchBar button[type="submit"] {
-  padding: 8px 12px;
-  background-color: #A0C24A;
-  border: none;
-  border-radius: 4px;
-  color: #424141;
-  font-size: 16px;
-  cursor: pointer;
-  margin-left: 8px;
-}
-
-/* header for b2b */
-.Headerb2b {
-  position: sticky;
-  top: 0;
-  width: 100%;
-  height: 80px;
-  display: block;
-  background-color: #f5f5f5;
-  z-index: 100;
-}
-
-.InnerHeaderb2b {
-  position: relative;
-  width: 80%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
-  background-color: #f5f5f5;
-}
-
-.LogoContainerb2b {
-  height: 100%;
-  display: table;
-  float: left;
-}
-
-/* Logo style */
-.LogoContainerb2b h1 {
-  padding-top: 18px;
-  color: #424141;
-  height: 100%;
-  display: table-cell;
-  vertical-align: middle;
-  font-size: 32px;
-  font-weight: 200;
-}
-
-/* Logo style */
-.LogoContainerb2b span {
-  font-weight: 800;
-  text-decoration: underline;
-  color: #A0C24A;
-}
-
-.Navigationb2b {
-  float: right;
-  height: 100%;
-}
-
-.Navigationb2b a {
-  height: 100%;
-  display: table;
-  float: left;
-  padding: 0px 18px;
-}
-
-/* Kontakt os button */
-.KontaktOsb2b {
-  padding: 10px;
-  margin-top: 1px;
-  background-color: #A0C24A;
-  border-radius: 8px;
-  height: 40px;
-  border-style: none;
-  font-family: 'Roboto';
-  color: #424141;
-  cursor: pointer;
-  font-size: 17px;
-}
-
- /* Shoppingcart */
-.CartButton {
-  padding: 10px;
-  margin-top: 20px;
-  background-color: #A0C24A;
-  border-radius: 8px;
-  height: 40px;
-  border-style: none;
-  font-family: 'Roboto';
-  color: #424141;
-  cursor: pointer;
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.KontaktOsb2b:hover {
-  scale: 110%;
-}
-
-.CartButton:hover {
-  background-color: #8ac77f; /* Adjust the background color as desired */
-}
-
-.CartButton img {
-  width: 20px; /* Adjust the width as desired */
-  height: 20px; /* Adjust the height as desired */
-  margin-bottom: 8px;
-}
-
-.Navigationb2b a li {
-  display: table-cell;
-  vertical-align: middle;
-  height: 100%;
-  color: #424141;
-  font-size: 17px;
-}
-
-/* Change color when hover */
-.Navigationb2b a li:hover {
-  color: #a4d792;
-  scale: 110%;
-}
-
 
 /* ShopByProduct styling of text */
 .ShopByProduct {
