update shopping cart (still not functional)

--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,6 @@
-/* Dette er en test på shopping kurven */
+/* Dette er en test på shopping kurven pt. 2*/
+
+
 .product_wrapper {
 	float:left;
 	padding: 10px;
